fix firefox scrollbars

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -211,7 +211,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
+/* Webkit browsers (Chrome, Safari, Edge) */
 ::-webkit-scrollbar {
 	width: 8px;
 	height: 8px;
@@ -223,10 +223,15 @@ h1, h2, h3, h4, h5, h6 {
 
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	border: 2px solid transparent; /* Add transparent space around the thumb */
-	// use box shadow as the background color
+	border: 2px solid transparent;
 	box-shadow: inset 0 0 0 20px var(--color-contrast) !important;
 	transition: 500ms;
+}
+
+/* Firefox */
+* {
+	scrollbar-width: thin;
+	scrollbar-color: var(--color-contrast) transparent;
 }
 
 
